--- a/examples/thermo-QHA.ipynb
+++ b/examples/thermo-QHA.ipynb
@@ -65,45 +65,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44de5be1-8b60-4a2f-95c2-1599f7ad8f59",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:49:26.844397Z",
+     "iopub.status.busy": "2023-06-14T23:49:26.844131Z",
+     "iopub.status.idle": "2023-06-14T23:49:48.525975Z",
+     "shell.execute_reply": "2023-06-14T23:49:48.525532Z",
+     "shell.execute_reply.started": "2023-06-14T23:49:26.844381Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:886: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
-      "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:900: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
+      "  self.combined_mode, close_overlap = self._combine_data(ha_list, mode_sort_tol=mode_sort_tol)\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     731.4816, Temperature:  20.00, Pressure:   0.50\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     727.3608, Temperature:  50.00, Pressure:   0.50\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     735.8410, Temperature:  80.00, Pressure:   0.50\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     712.6598, Temperature:  20.00, Pressure:   0.75\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     707.0863, Temperature:  50.00, Pressure:   0.75\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     699.0939, Temperature:  20.00, Pressure:   1.00\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     695.8104, Temperature:  50.00, Pressure:   1.00\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2066538/2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "/tmp/ipykernel_211669/3197406120.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  Volume:     732.3224, Temperature:  80.00, Pressure:   1.00\n",
       "\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n"
@@ -112,10 +121,10 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x154134199ca0>"
+       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x7f3117a22820>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +139,7 @@
     "\n",
     "press = np.linspace(0, 1, 5)\n",
     "\n",
-    "qha = Quasi_harmonic(write_out=True, filename='data/f1-thermo-QHA.dat').from_HA_files(file_list, overlap=0.4)\n",
+    "qha = Quasi_harmonic(filename='data/f1-thermo-QHA.dat').from_HA_files(file_list)\n",
     "qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan', \n",
     "                poly_order=[2, 3], min_method='BFGS')"
    ]
@@ -147,9 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2aaa0e2b-ea7d-4c1e-bc30-3f97780c0a60",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:49:48.527028Z",
+     "iopub.status.busy": "2023-06-14T23:49:48.526805Z",
+     "iopub.status.idle": "2023-06-14T23:49:48.940549Z",
+     "shell.execute_reply": "2023-06-14T23:49:48.940114Z",
+     "shell.execute_reply.started": "2023-06-14T23:49:48.527013Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -186,9 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c083f2f0-87f8-4aea-a085-18e2e88c83e5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:49:48.941294Z",
+     "iopub.status.busy": "2023-06-14T23:49:48.941155Z",
+     "iopub.status.idle": "2023-06-14T23:50:08.983796Z",
+     "shell.execute_reply": "2023-06-14T23:50:08.983344Z",
+     "shell.execute_reply.started": "2023-06-14T23:49:48.941280Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdin",
@@ -359,25 +386,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ac4d2c34-cb25-4421-b3d5-7cb7c0b1e985",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:50:57.874755Z",
+     "iopub.status.busy": "2023-06-14T23:50:57.874479Z",
+     "iopub.status.idle": "2023-06-14T23:50:59.685907Z",
+     "shell.execute_reply": "2023-06-14T23:50:59.685498Z",
+     "shell.execute_reply.started": "2023-06-14T23:50:57.874729Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:1008: UserWarning: Close overlap of phonon modes detected at qpoint:   0,     34 overlaps out of     90 modes.\n",
-      "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n"
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:978: UserWarning: Close overlap of phonon modes detected at qpoint:   0,     34 overlaps out of     90 modes.\n",
+      "  self.combined_mode, close_overlap = self._combine_data(ha_list, mode_sort_tol)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x152778c49fd0>"
+       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x7f30dab79f10>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +427,7 @@
     "tempt = np.linspace(0, 1000, 5)\n",
     "press = np.linspace(0, 1, 5)\n",
     "\n",
-    "qha = Quasi_harmonic(write_out=False).from_QHA_file(file)\n",
+    "qha = Quasi_harmonic(filename=None).from_QHA_file(file)\n",
     "qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan', \n",
     "                poly_order=[3], min_method='BFGS')"
    ]
@@ -408,25 +444,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "0640414b-b95f-4637-bcbd-e813989d31c4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:51:21.481387Z",
+     "iopub.status.busy": "2023-06-14T23:51:21.481131Z",
+     "iopub.status.idle": "2023-06-14T23:51:27.020449Z",
+     "shell.execute_reply": "2023-06-14T23:51:27.019996Z",
+     "shell.execute_reply.started": "2023-06-14T23:51:21.481372Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:1008: UserWarning: Close overlap of phonon modes detected at qpoint:   0,     34 overlaps out of     90 modes.\n",
-      "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n"
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:978: UserWarning: Close overlap of phonon modes detected at qpoint:   0,     34 overlaps out of     90 modes.\n",
+      "  self.combined_mode, close_overlap = self._combine_data(ha_list, mode_sort_tol)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x152740339d30>"
+       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x7f30d8f8dd60>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,15 +481,24 @@
     "tempt = np.linspace(0, 1000, 5)\n",
     "press = np.linspace(0, 1, 5)\n",
     "\n",
-    "gru = Quasi_harmonic(write_out=True, filename='data/al2o3-grun-QHA.dat').from_QHA_file(file)\n",
+    "gru = Quasi_harmonic(filename='data/al2o3-grun-QHA.dat').from_QHA_file(file)\n",
     "gru.thermo_gruneisen(temperature=tempt, pressure=press, eos_method='birch_murnaghan', min_method='BFGS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e9585ada-7321-4e12-9f1f-7c51183b44bc",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:51:29.688212Z",
+     "iopub.status.busy": "2023-06-14T23:51:29.687833Z",
+     "iopub.status.idle": "2023-06-14T23:51:29.823214Z",
+     "shell.execute_reply": "2023-06-14T23:51:29.822842Z",
+     "shell.execute_reply.started": "2023-06-14T23:51:29.688186Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -490,24 +544,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c3c1ab90-c40c-4e01-9676-1f0a26bfc555",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:54:14.114350Z",
+     "iopub.status.busy": "2023-06-14T23:54:14.114228Z",
+     "iopub.status.idle": "2023-06-14T23:54:36.540997Z",
+     "shell.execute_reply": "2023-06-14T23:54:36.540438Z",
+     "shell.execute_reply.started": "2023-06-14T23:54:14.114335Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:886: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
-      "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n"
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:900: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
+      "  self.combined_mode, close_overlap = self._combine_data(ha_list, mode_sort_tol=mode_sort_tol)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time consumption for Mode-Specific fitting:    62.078255 s\n",
-      "Time consumption for EoS fitting:     0.415031 s\n"
+      "Time consumption for Mode-Specific fitting:    18.244424 s\n",
+      "Time consumption for EoS fitting:     0.884125 s\n"
      ]
     }
    ],
@@ -521,8 +584,8 @@
     "tempt = np.array([20, 50, 80, 150, 200, 250, 330], dtype=float)\n",
     "press = np.linspace(0, 1, 5)\n",
     "\n",
-    "mode = Quasi_harmonic(write_out=False).from_HA_files(file_list, overlap=0.4)\n",
-    "eos = Quasi_harmonic(write_out=False).from_HA_files(file_list, sort_phonon=False)\n",
+    "mode = Quasi_harmonic().from_HA_files(file_list, mode_sort_tol=0.4)\n",
+    "eos = Quasi_harmonic().from_HA_files(file_list, mode_sort_tol=None)\n",
     "\n",
     "tbg = time.perf_counter()\n",
     "# Mode-specific\n",
@@ -543,9 +606,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "a19eed27-f65e-405e-a125-06c9dcc06a28",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T23:54:36.543845Z",
+     "iopub.status.busy": "2023-06-14T23:54:36.543558Z",
+     "iopub.status.idle": "2023-06-14T23:54:36.972761Z",
+     "shell.execute_reply": "2023-06-14T23:54:36.972281Z",
+     "shell.execute_reply.started": "2023-06-14T23:54:36.543829Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
