--- a/examples/thermo_file_readwrite.ipynb
+++ b/examples/thermo_file_readwrite.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "source": [
     "# Basic I/O of DFPT\n",
-    "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'crystal_io.py' since July 2022.\n",
-    "\n",
-    "**Classes used in this tutorial are defined in 'CRYSTALpytools.crystal_io'. Documentations and source codes are attached at the bottom of this page.**"
+    "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'crystal_io.py' since July 2022."
    ]
   },
   {
@@ -18,7 +16,7 @@
    "source": [
     "## Tests\n",
     "\n",
-    "4 tests are performed. The first one is for $\\Gamma$ point frequencies. The second one is for dispersion calculations. The third one has negative frequencies, in order to examine the method `clean_imaginary`. The last one is to illustrate the general applicability of this module to QHA outputs.\n",
+    "4 tests are performed. The first one is for $\\Gamma$ point frequencies. The second one is for dispersion calculations. The third one has negative frequencies, in order to examine the input option `rm_imaginary`. The last one is to illustrate the general applicability of this module to QHA outputs.\n",
     "\n",
     "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies, with occasional warning messages. nqpoint = 1, nmode = 240, natom = 80.  \n",
     "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2.  \n",
@@ -33,7 +31,10 @@
    "source": [
     "### Get energy, qpoints and frequencies at each qpoint\n",
     "\n",
-    "nqpoint = 1, nmode = 240 for paracetamol case, nqpoint = 123, nmode = 3 for graphene case. In both cases, nqpoint should be an integer and nmode should be a numpy array."
+    "nqpoint = 1, nmode = 240 for paracetamol case, nqpoint = 120, nmode = 6 for graphene case. 123 q points exist in the graphene case, with 3 of them overlapping with the previous run, which, by default, is removed. To keep them, set `rm_overlap` = False.\n",
+    "\n",
+    "\n",
+    "In both cases, nqpoint should be an integer and nmode should be a numpy array."
    ]
   },
   {
@@ -41,7 +42,15 @@
    "execution_count": 1,
    "id": "f458c8f9",
    "metadata": {
-    "scrolled": true
+    "execution": {
+     "iopub.execute_input": "2023-06-14T22:38:21.663213Z",
+     "iopub.status.busy": "2023-06-14T22:38:21.662841Z",
+     "iopub.status.idle": "2023-06-14T22:38:21.861090Z",
+     "shell.execute_reply": "2023-06-14T22:38:21.860391Z",
+     "shell.execute_reply.started": "2023-06-14T22:38:21.663194Z"
+    },
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -59,7 +68,7 @@
     "\n",
     "paracetamol = Crystal_output()\n",
     "paracetamol.read_cry_output('data/freqf1-r0.out')\n",
-    "paracetamol.get_mode()\n",
+    "paracetamol.get_phonon()\n",
     "print('Paracetamol EDFT:', paracetamol.edft[0])\n",
     "print('Paracetamol qpoint:', paracetamol.nqpoint, paracetamol.qpoint)\n",
     "print('Paracetamol modes:', len(paracetamol.nmode), paracetamol.nmode)"
@@ -69,25 +78,49 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "5cf3f4ec",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T22:38:22.051957Z",
+     "iopub.status.busy": "2023-06-14T22:38:22.051632Z",
+     "iopub.status.idle": "2023-06-14T22:38:22.167256Z",
+     "shell.execute_reply": "2023-06-14T22:38:22.166600Z",
+     "shell.execute_reply.started": "2023-06-14T22:38:22.051940Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Graphene EDFT: -28768034.906402458\n",
-      "Graphene qpoints: 123\n",
-      "Graphene modes: 123 [6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
+      "Graphene qpoints: 120\n",
+      "Graphene modes: 120 [6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
       " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
       " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
-      " 6 6 6 6 6 6 6 6 6 6 6 6]\n"
+      " 6 6 6 6 6 6 6 6 6]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:937: UserWarning: Negative frequencies detected.\n",
+      "  Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
+      "  self = PhononBASE.clean_imaginary(self, threshold=imaginary_tol)\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:940: UserWarning: Overlap of q points is detected between q points   0 and 122\n",
+      "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:940: UserWarning: Overlap of q points is detected between q points  40 and  41\n",
+      "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:940: UserWarning: Overlap of q points is detected between q points  81 and  82\n",
+      "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n"
      ]
     }
    ],
    "source": [
     "graphene = Crystal_output()\n",
     "graphene.read_cry_output('data/nostr_modes.out')\n",
-    "graphene.get_mode()\n",
+    "graphene.get_phonon()\n",
     "print('Graphene EDFT:', graphene.edft[0])\n",
     "print('Graphene qpoints:', graphene.nqpoint)\n",
     "print('Graphene modes:', len(graphene.nmode), graphene.nmode)"
@@ -99,7 +132,7 @@
    "metadata": {},
    "source": [
     "### Get eigenvectors\n",
-    "Self.eigenvector should be a 1 (nqpoint) * 240 (nmode) * 80 (natom) * 3 (xyz) numpy array for paracetamol case. A 123 * 6 * 2 * 3 array for graphene case."
+    "Self.eigenvector should be a 1 (nqpoint) * 240 (nmode) * 80 (natom) * 3 (xyz) numpy array for paracetamol case. A 123 * 6 * 2 * 3 array for graphene case. Overlapping q points and imaginary modes are kept."
    ]
   },
   {
@@ -114,7 +147,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d88c6de7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T22:38:24.126800Z",
+     "iopub.status.busy": "2023-06-14T22:38:24.126507Z",
+     "iopub.status.idle": "2023-06-14T22:38:24.254983Z",
+     "shell.execute_reply": "2023-06-14T22:38:24.254306Z",
+     "shell.execute_reply.started": "2023-06-14T22:38:24.126784Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,7 +170,7 @@
     }
    ],
    "source": [
-    "paracetamol.get_phonon_eigenvector()\n",
+    "paracetamol.get_phonon(read_eigvt=True, rm_imaginary=False, rm_overlap=False)\n",
     "\n",
     "print('Paracetamol')\n",
     "print('nqpoint=', len(paracetamol.eigenvector),\n",
@@ -136,7 +178,7 @@
     "      'natom=', len(paracetamol.eigenvector[0, 0]),\n",
     "      'first eigenvector=', paracetamol.eigenvector[0, 0, 0])\n",
     "\n",
-    "lattice = graphene.get_phonon_eigenvector()\n",
+    "lattice = graphene.get_phonon(read_eigvt=True, rm_imaginary=False, rm_overlap=False)\n",
     "print('Graphene')\n",
     "print('nqpoint=', len(graphene.eigenvector),\n",
     "      'nmode=', len(graphene.eigenvector[0]),\n",
@@ -148,7 +190,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f03b4019",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T22:38:26.349710Z",
+     "iopub.status.busy": "2023-06-14T22:38:26.349425Z",
+     "iopub.status.idle": "2023-06-14T22:38:26.353428Z",
+     "shell.execute_reply": "2023-06-14T22:38:26.352926Z",
+     "shell.execute_reply.started": "2023-06-14T22:38:26.349692Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -221,6 +272,8 @@
     "### Get rid of negative frequency\n",
     "A test is performed on a harmonic phonon output with negative frequencies. In principle, the user is expected to redo all calculations to get rid of imaginary modes, instead of continuing thermodynamic analysis. Here we assume the user does not know the existance of imagninary modes.\n",
     "\n",
+    "Removing negative frequency is launched by default with `rm_imaginary` = True.\n",
+    "\n",
     "Tests performed on Form II paracetamol $\\Gamma$ point, stretched by 2% volumetric strain. There are 160 atoms, 480 modes, 1 qpoint. The output is attached in the same directory named as 'f2p2q-r1.out'. Modes 1-5 are negative, as given below:\n",
     "\n",
     "```\n",
@@ -241,7 +294,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "985f98aa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T22:38:28.554498Z",
+     "iopub.status.busy": "2023-06-14T22:38:28.554230Z",
+     "iopub.status.idle": "2023-06-14T22:38:28.851257Z",
+     "shell.execute_reply": "2023-06-14T22:38:28.850542Z",
+     "shell.execute_reply.started": "2023-06-14T22:38:28.554474Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -255,22 +317,12 @@
       " [        nan         nan         nan]\n",
       " [-0.07905694 -0.          0.        ]]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2569159/3833995582.py:5: UserWarning: Negative frequencies detected - Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
-      "  neg_freq.clean_imaginary()\n"
-     ]
     }
    ],
    "source": [
     "neg_freq = Crystal_output()\n",
     "neg_freq.read_cry_output('data/f2p2q-r1.out')\n",
-    "neg_freq.get_mode()\n",
-    "neg_freq.get_phonon_eigenvector()\n",
-    "neg_freq.clean_imaginary()\n",
+    "neg_freq.get_phonon(read_eigvt=True)\n",
     "\n",
     "print(neg_freq.frequency[0, :6])\n",
     "print(neg_freq.eigenvector[0, :6, 0, :])"
@@ -283,14 +335,27 @@
    "source": [
     "### Read outputs from QHA module\n",
     "\n",
-    "The QHA module of CRYSTAL includes automatic generation, optimization and frequency calculations at $\\Gamma$ point. Therefore a different strategy is adopted and keeps the structure of code consistent. Since in all cases, nqpoint = 1, this dimension is removed to avoid an extra 'ncalc' dimension. `Crystal_output().frequency` becomes a 'ncalc\\*nmode' list that corresponds to frequencies at each volume, or HA phonon calculation, instead of at each q point. Other attributes are changed accordingly."
+    "The QHA module of CRYSTAL includes automatic generation, optimization and frequency calculations at $\\Gamma$ point. Therefore a different strategy is adopted and keeps the structure of code consistent. Since in all cases, nqpoint = 1, this dimension is removed to avoid an extra 'ncalc' dimension. `Crystal_output().frequency` becomes a 'ncalc\\*nmode' list that corresponds to frequencies at each volume, or HA phonon calculation, instead of at each q point. Other attributes are changed accordingly.\n",
+    "\n",
+    "**NOTE**\n",
+    "\n",
+    "When this method is called, `rm_overlap` MUST be false. Reading it with `CRYSTALpytools.thermodynamics.Quasi_harmonic.from_QHA_file` method is recommended."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "27693bda-617f-479b-872a-db906e7634a2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-14T22:38:30.347678Z",
+     "iopub.status.busy": "2023-06-14T22:38:30.347004Z",
+     "iopub.status.idle": "2023-06-14T22:38:30.481818Z",
+     "shell.execute_reply": "2023-06-14T22:38:30.481267Z",
+     "shell.execute_reply.started": "2023-06-14T22:38:30.347655Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -305,8 +370,7 @@
    "source": [
     "qha_freq = Crystal_output()\n",
     "qha_freq.read_cry_output('data/corundum.out')\n",
-    "qha_freq.get_mode()\n",
-    "qha_freq.get_phonon_eigenvector()\n",
+    "qha_freq.get_phonon(read_eigvt=True, rm_overlap=False)\n",
     "\n",
     "print(qha_freq.nqpoint)\n",
     "print(qha_freq.qpoint)\n",
