Complex eigenvectors implemented.

--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -42,13 +42,6 @@
    "execution_count": 1,
    "id": "18a94ee0",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T23:17:21.518774Z",
-     "iopub.status.busy": "2023-06-14T23:17:21.518499Z",
-     "iopub.status.idle": "2023-06-14T23:17:22.160090Z",
-     "shell.execute_reply": "2023-06-14T23:17:22.159491Z",
-     "shell.execute_reply.started": "2023-06-14T23:17:21.518755Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -157,13 +150,6 @@
    "execution_count": 2,
    "id": "d5e8d24b",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:45:24.631676Z",
-     "iopub.status.busy": "2023-06-14T22:45:24.631482Z",
-     "iopub.status.idle": "2023-06-14T22:45:28.846093Z",
-     "shell.execute_reply": "2023-06-14T22:45:28.845400Z",
-     "shell.execute_reply.started": "2023-06-14T22:45:24.631661Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -171,27 +157,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:595: UserWarning: Negative frequencies detected.\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:600: UserWarning: Negative frequencies detected.\n",
       "  Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
       "  self = PhononBASE.clean_imaginary(self, threshold=imaginary_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:596: UserWarning: Overlap of q points is detected between q points  19 and  20\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:601: UserWarning: Overlap of q points is detected between q points  19 and  20\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:596: UserWarning: Overlap of q points is detected between q points  39 and  40\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:601: UserWarning: Overlap of q points is detected between q points  39 and  40\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:596: UserWarning: Overlap of q points is detected between q points  59 and  60\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:601: UserWarning: Overlap of q points is detected between q points  59 and  60\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:596: UserWarning: Overlap of q points is detected between q points  79 and  80\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:601: UserWarning: Overlap of q points is detected between q points  79 and  80\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:596: UserWarning: Overlap of q points is detected between q points  99 and 100\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:601: UserWarning: Overlap of q points is detected between q points  99 and 100\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:596: UserWarning: Overlap of q points is detected between q points 119 and 120\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:601: UserWarning: Overlap of q points is detected between q points 119 and 120\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7f20b413c550>"
+       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7fedc04af4c0>"
       ]
      },
      "execution_count": 2,
