--- a/examples/thermo_file_readwrite.ipynb
+++ b/examples/thermo_file_readwrite.ipynb
@@ -42,13 +42,6 @@
    "execution_count": 1,
    "id": "f458c8f9",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:38:21.663213Z",
-     "iopub.status.busy": "2023-06-14T22:38:21.662841Z",
-     "iopub.status.idle": "2023-06-14T22:38:21.861090Z",
-     "shell.execute_reply": "2023-06-14T22:38:21.860391Z",
-     "shell.execute_reply.started": "2023-06-14T22:38:21.663194Z"
-    },
     "scrolled": true,
     "tags": []
    },
@@ -79,13 +72,6 @@
    "execution_count": 2,
    "id": "5cf3f4ec",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:38:22.051957Z",
-     "iopub.status.busy": "2023-06-14T22:38:22.051632Z",
-     "iopub.status.idle": "2023-06-14T22:38:22.167256Z",
-     "shell.execute_reply": "2023-06-14T22:38:22.166600Z",
-     "shell.execute_reply.started": "2023-06-14T22:38:22.051940Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -105,14 +91,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:937: UserWarning: Negative frequencies detected.\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:1007: UserWarning: Negative frequencies detected.\n",
       "  Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
       "  self = PhononBASE.clean_imaginary(self, threshold=imaginary_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:940: UserWarning: Overlap of q points is detected between q points   0 and 122\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:1010: UserWarning: Overlap of q points is detected between q points   0 and 122\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:940: UserWarning: Overlap of q points is detected between q points  40 and  41\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:1010: UserWarning: Overlap of q points is detected between q points  40 and  41\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n",
-      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:940: UserWarning: Overlap of q points is detected between q points  81 and  82\n",
+      "/home/e89/e89/hyz20ic/app/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:1010: UserWarning: Overlap of q points is detected between q points  81 and  82\n",
       "  self = PhononBASE.clean_q_overlap(self, threshold=q_overlap_tol)\n"
      ]
     }
@@ -132,7 +118,7 @@
    "metadata": {},
    "source": [
     "### Get eigenvectors\n",
-    "Self.eigenvector should be a 1 (nqpoint) * 240 (nmode) * 80 (natom) * 3 (xyz) numpy array for paracetamol case. A 123 * 6 * 2 * 3 array for graphene case. Overlapping q points and imaginary modes are kept."
+    "Self.eigenvector should be a 1 (nqpoint) * 240 (nmode) * 80 (natom) * 3 (xyz) complex array for paracetamol case. A 123 * 6 * 2 * 3 complex array for graphene case. Overlapping q points and imaginary modes are kept."
    ]
   },
   {
@@ -148,13 +134,6 @@
    "execution_count": 3,
    "id": "d88c6de7",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:38:24.126800Z",
-     "iopub.status.busy": "2023-06-14T22:38:24.126507Z",
-     "iopub.status.idle": "2023-06-14T22:38:24.254983Z",
-     "shell.execute_reply": "2023-06-14T22:38:24.254306Z",
-     "shell.execute_reply.started": "2023-06-14T22:38:24.126784Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -163,9 +142,9 @@
      "output_type": "stream",
      "text": [
       "Paracetamol\n",
-      "nqpoint= 1 nmode= 240 natom= 80 first eigenvector= [ 0.11126206  0.         -0.01098885]\n",
+      "nqpoint= 1 nmode= 240 natom= 80 first eigenvector= [ 0.11126206+0.j  0.        +0.j -0.01098885+0.j]\n",
       "Graphene\n",
-      "nqpoint= 123 nmode= 6 natom= 2 first eigenvector= [ 0.         -0.          0.70710678]\n"
+      "nqpoint= 123 nmode= 6 natom= 2 first eigenvector= [0.        +0.j 0.        +0.j 0.70710678+0.j]\n"
      ]
     }
    ],
@@ -178,12 +157,12 @@
     "      'natom=', len(paracetamol.eigenvector[0, 0]),\n",
     "      'first eigenvector=', paracetamol.eigenvector[0, 0, 0])\n",
     "\n",
-    "lattice = graphene.get_phonon(read_eigvt=True, rm_imaginary=False, rm_overlap=False)\n",
+    "graphene.get_phonon(read_eigvt=True, rm_imaginary=False, rm_overlap=False)\n",
     "print('Graphene')\n",
     "print('nqpoint=', len(graphene.eigenvector),\n",
     "      'nmode=', len(graphene.eigenvector[0]),\n",
     "      'natom=', len(graphene.eigenvector[0, 0]),\n",
-    "      'first eigenvector=', graphene.eigenvector[0, 0, 0])\n"
+    "      'first eigenvector=', graphene.eigenvector[0, 0, 0])"
    ]
   },
   {
@@ -191,13 +170,6 @@
    "execution_count": 4,
    "id": "f03b4019",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:38:26.349710Z",
-     "iopub.status.busy": "2023-06-14T22:38:26.349425Z",
-     "iopub.status.idle": "2023-06-14T22:38:26.353428Z",
-     "shell.execute_reply": "2023-06-14T22:38:26.352926Z",
-     "shell.execute_reply.started": "2023-06-14T22:38:26.349692Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -205,15 +177,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wavevector coordinates: [array([0.47083333, 0.05833333, 0.        ]), 0.008130081300813009]\n",
+      "Wavevector coordinates: [0.47083333 0.05833333 0.        ]\n",
       "Frequency: 19.8656\n",
-      "Eigenvectors: [[ 3.49519213e-04  7.13019194e-01 -3.49519213e-04]\n",
-      " [-3.49519213e-03  7.01135541e-01  3.49519213e-04]]\n"
+      "Eigenvectors: [[ 3.46485288e-04+0.02078912j  7.06829987e-01+0.j\n",
+      "  -3.46485288e-04+0.j        ]\n",
+      " [-3.46485288e-03-0.02044263j  6.95049487e-01-0.12819956j\n",
+      "   3.46485288e-04+0.j        ]]\n"
      ]
     }
    ],
    "source": [
-    "print('Wavevector coordinates:', graphene.qpoint[74])\n",
+    "print('Wavevector coordinates:', graphene.qpoint[74][0])\n",
     "print('Frequency:', graphene.frequency[74, 2])\n",
     "print('Eigenvectors:', graphene.eigenvector[74, 2])"
    ]
@@ -260,7 +234,18 @@
     "            Z     0.2041   -0.2007   -0.0001    0.0001    0.0001    0.0000\n",
     " AT.   2 C  X    -0.0001    0.0001   -0.0010    0.2041    0.1963    0.0003\n",
     "            Y     0.0000   -0.0001    0.2006   -0.0004   -0.0077    0.1996\n",
-    "            Z     0.2007    0.2041    0.0001    0.0001   -0.0001   -0.0000 \n",
+    "            Z     0.2007    0.2041    0.0001    0.0001   -0.0001   -0.0000\n",
+    "\n",
+    " MODES IN ANTI-PHASE\n",
+    "\n",
+    " FREQ(CM**-1)    487.19    635.47    662.64   1376.35   1410.62   1462.32\n",
+    "\n",
+    " AT.   1 C  X    -0.0000    0.0000    0.0060   -0.0368    0.0002   -0.0420\n",
+    "            Y     0.0000   -0.0000   -0.0000   -0.0058    0.0425   -0.0362\n",
+    "            Z    -0.0000   -0.0372    0.0000    0.0000    0.0000   -0.0000\n",
+    " AT.   2 C  X     0.0000    0.0000   -0.0059   -0.0001   -0.0361   -0.0425\n",
+    "            Y     0.0000   -0.0000   -0.0370   -0.0060   -0.0418    0.0000\n",
+    "            Z    -0.0372   -0.0000   -0.0000    0.0000    0.0000    0.0000\n",
     "```\n"
    ]
   },
@@ -295,13 +280,6 @@
    "execution_count": 5,
    "id": "985f98aa",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:38:28.554498Z",
-     "iopub.status.busy": "2023-06-14T22:38:28.554230Z",
-     "iopub.status.idle": "2023-06-14T22:38:28.851257Z",
-     "shell.execute_reply": "2023-06-14T22:38:28.850542Z",
-     "shell.execute_reply.started": "2023-06-14T22:38:28.554474Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -310,12 +288,12 @@
      "output_type": "stream",
      "text": [
       "[nan nan nan nan nan  0.]\n",
-      "[[        nan         nan         nan]\n",
-      " [        nan         nan         nan]\n",
-      " [        nan         nan         nan]\n",
-      " [        nan         nan         nan]\n",
-      " [        nan         nan         nan]\n",
-      " [-0.07905694 -0.          0.        ]]\n"
+      "[[        nan+0.j         nan+0.j         nan+0.j]\n",
+      " [        nan+0.j         nan+0.j         nan+0.j]\n",
+      " [        nan+0.j         nan+0.j         nan+0.j]\n",
+      " [        nan+0.j         nan+0.j         nan+0.j]\n",
+      " [        nan+0.j         nan+0.j         nan+0.j]\n",
+      " [-0.07905694+0.j  0.        +0.j  0.        +0.j]]\n"
      ]
     }
    ],
@@ -347,13 +325,6 @@
    "execution_count": 6,
    "id": "27693bda-617f-479b-872a-db906e7634a2",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-14T22:38:30.347678Z",
-     "iopub.status.busy": "2023-06-14T22:38:30.347004Z",
-     "iopub.status.idle": "2023-06-14T22:38:30.481818Z",
-     "shell.execute_reply": "2023-06-14T22:38:30.481267Z",
-     "shell.execute_reply.started": "2023-06-14T22:38:30.347655Z"
-    },
     "tags": []
    },
    "outputs": [
