update phonopy hessian tutorials

--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -18,9 +18,10 @@
    "metadata": {},
    "source": [
     "## Tests\n",
-    "2 tests are performed. One is based on $\\Gamma$ point calculations and the other one is based on phonon dispersion calculations.\n",
+    "3 tests are performed. Two are based on $\\Gamma$ point calculations and the other one is based on phonon dispersion calculations.\n",
     "\n",
     "1. Thermodynamic properties at room temperature (298.15K), 0 pressure - For comparison with CRYSTAL17 output.  \n",
+    "1. Thermodynamic properties at room temperature (298.15K), 0 pressure - Converted to Phonopy FORCE_CONSTANTS file.  \n",
     "2. Thermodynamic properties from 0K to 300K, with the interval of 20K and from 0 GPa to 0.5 GPa with the interval of - To illustrate the structure of output file and key information. \n",
     "\n",
     "**N.B.** It is somehow meanless to consider pressure & Gibbs free energy at Harmonic level, since the volume is assumed as constant. $G(T, p)=F(T)+pV$."
@@ -130,6 +131,83 @@
     "\n",
     " *******************************************************************************\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ba0a83-463b-4bfc-975b-0f00afddc27f",
+   "metadata": {},
+   "source": [
+    "### Conversion to Phonopy FORCE\\_CONSTANTS file\n",
+    "The numerical Hessian is printed out in a formatted 'HESSFREQ.DAT' file by CRYSTAL, which can be converted into a Phonopy FORCE\\_CONSTANTS file by the `thermodynamics.Phonopy.write_force_constants()` method.\n",
+    "\n",
+    "The 'data/freqf1-r0.HESSFREQ' file is used as an example. Phonopy required."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8b06145c-9181-4508-a73f-238401cdcffe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        _\n",
+      "  _ __ | |__   ___  _ __   ___   _ __  _   _\n",
+      " | '_ \\| '_ \\ / _ \\| '_ \\ / _ \\ | '_ \\| | | |\n",
+      " | |_) | | | | (_) | | | | (_) || |_) | |_| |\n",
+      " | .__/|_| |_|\\___/|_| |_|\\___(_) .__/ \\__, |\n",
+      " |_|                            |_|    |___/\n",
+      "                                      2.19.1\n",
+      "\n",
+      "Compiled with OpenMP support (max 256 threads).\n",
+      "Python version 3.9.16\n",
+      "Spglib version 2.0.2\n",
+      "\n",
+      "\n",
+      "Calculator interface: crystal\n",
+      "Crystal structure was read from \"freqf1-r0.out\".\n",
+      "Unit of length: angstrom\n",
+      "QPOINTS mode\n",
+      "Settings:\n",
+      "  Supercell: [1 1 1]\n",
+      "Spacegroup: P2_1/c (14)\n",
+      "Use -v option to watch primitive cell, unit cell, and supercell structures.\n",
+      "\n",
+      "Force constants are read from \"FORCE_CONSTANTS\".\n",
+      "Force constants format was transformed to compact format.\n",
+      "Array shape of force constants: (80, 80, 3, 3)\n",
+      "\n",
+      "Q-points that will be calculated at:\n",
+      "    [0. 0. 0.]\n",
+      "\n",
+      "Summary of calculation was written in \"phonopy.yaml\".\n",
+      "                 _\n",
+      "   ___ _ __   __| |\n",
+      "  / _ \\ '_ \\ / _` |\n",
+      " |  __/ | | | (_| |\n",
+      "  \\___|_| |_|\\__,_|\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from CRYSTALpytools.thermodynamics import Phonopy\n",
+    "\n",
+    "Phonopy.write_force_constants(hessfile='data/freqf1-r0.HESSFREQ', phonopyfile='data/FORCE_CONSTANTS')\n",
+    "! cd data; phonopy --crystal --qpoints='0 0 0' -c freqf1-r0.out --dim='1 1 1' --readfc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6012293b-19c1-4dd3-8748-986033832a7a",
+   "metadata": {},
+   "source": [
+    "The phonon frequencies in THz at $\\Gamma$ point are printed into the 'data/qpoints.yaml' and the geometry information is printed into 'data/phonopy.yaml'. Slight deviations are observed because CRYSTAL fully utilizes the symmetry which makes the first 3 translational modes to be 0."
    ]
   },
   {
