--- a/examples/crystal_io.ipynb
+++ b/examples/crystal_io.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "0a495139",
    "metadata": {
     "tags": []
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "bfb6e6f8",
    "metadata": {
     "tags": []
@@ -573,10 +573,10 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Crystal_output at 0x7fb2b8634460>"
+       "<CRYSTALpytools.crystal_io.Crystal_output at 0x7f3d3441ccd0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "be5bb4eb-b17c-4bf3-8f80-557739f878a7",
    "metadata": {
     "tags": []
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3a68c6bb-2f33-4cd3-829b-b3f01c57b122",
    "metadata": {
     "tags": []
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "51c96b9b-41bf-437c-8638-428edb65c9ee",
    "metadata": {
     "tags": []
@@ -756,13 +756,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "2a3b5a22-15d1-480f-a5a1-3aff73cd98d7",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1121,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "26a62b31-3d17-4d4d-be07-5c5e15b0f947",
    "metadata": {
     "tags": []
@@ -1183,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "3c4f5cac-2a16-4208-9976-d70a0063e9a9",
    "metadata": {
     "tags": []
@@ -1193,7 +1189,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir: cannot create directory ‘data/mgo_optgeom.opttraj’: File exists\n",
       "Optimization convergence status = converged\n",
       "\n",
       "Optimization cycles = 4\n",
@@ -1243,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "1cc03b02",
    "metadata": {
     "tags": []
@@ -1255,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "7798fb5e",
    "metadata": {
     "tags": []
@@ -1379,9 +1374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "1aa05d78",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from CRYSTALpytools.crystal_io import Properties_input\n",
@@ -1404,9 +1401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "22d53374",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1420,7 +1419,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,9 +1438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "9698e3ba",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pymatgen.symmetry.bandstructure import HighSymmKpath\n",
@@ -1458,8 +1459,7 @@
     "bands_input.make_newk_block(12,24)\n",
     "\n",
     "#Read the structure\n",
-    "mgo = Crystal_output().read_cry_output('data/mgo.out')\n",
-    "mgo = cry_out2pmg(mgo)\n",
+    "mgo = cry_out2pmg('data/mgo.out')\n",
     "mgo_prim = SpacegroupAnalyzer(mgo).get_primitive_standard_structure(international_monoclinic=False)\n",
     "\n",
     "#Obtain the k path object\n",
@@ -1476,9 +1476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "90cba974",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1500,7 +1502,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,9 +1521,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "1ce65af5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from CRYSTALpytools.crystal_io import Properties_input\n",
@@ -1541,9 +1545,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "933b281c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1564,10 +1570,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "62c51e8e",
+   "cell_type": "markdown",
+   "id": "503866da",
    "metadata": {},
+   "source": [
+    "#### pdoss (atoms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "62c51e8e",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from CRYSTALpytools.crystal_io import Properties_input\n",
@@ -1587,18 +1603,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "503866da",
-   "metadata": {},
-   "source": [
-    "#### pdoss (atoms)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "42fd2517",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1620,10 +1630,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "89f9c099",
+   "cell_type": "markdown",
+   "id": "30fa6e6e",
    "metadata": {},
+   "source": [
+    "#### pdoss (ao)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "89f9c099",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from CRYSTALpytools.crystal_io import Properties_input\n",
@@ -1644,18 +1664,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "30fa6e6e",
-   "metadata": {},
-   "source": [
-    "#### pdoss (ao)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "4cbf8ebd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1686,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "844eb99c",
    "metadata": {
     "tags": []
@@ -1707,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "7525ccbb",
    "metadata": {
     "tags": []
@@ -1716,10 +1730,10 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Properties_output at 0x7fbace2df400>"
+       "<CRYSTALpytools.crystal_io.Properties_output at 0x7f3d2fd2cca0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "ec69cfae",
    "metadata": {
     "scrolled": true,
@@ -1751,10 +1765,10 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.base.propout.DOSBASE at 0x7fbf302077c0>"
+       "<CRYSTALpytools.base.propout.DOSBASE at 0x7f3d327e5100>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "a2c9ec2a-e36d-4812-9b6f-7095c8ebb295",
    "metadata": {
     "tags": []
@@ -1791,12 +1805,12 @@
    "metadata": {},
    "source": [
     "#### Read CRYSTAL GUI file\n",
-    "A gui file is read by `Crystal_gui().read_gui()` method. It can be converted into other geometry data formats including Pymatgen Structure/Molecule object and CIF file."
+    "A gui file is read by `Crystal_gui().read_gui()` method. The file can be converted into other geometry data formats including Pymatgen Structure/Molecule object and CIF file using functions in `CRYSTALpytools.convert`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "286c6a39-fb2a-4120-bf05-06ffc7325fe2",
    "metadata": {
     "tags": []
@@ -1806,24 +1820,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full Formula (Mg2)\n",
-      "Reduced Formula: Mg\n",
-      "abc   :   2.998288   2.998288   2.998288\n",
-      "angles:  60.000000  60.000000  60.000000\n",
-      "pbc   :       True       True       True\n",
-      "Sites (2)\n",
-      "  #  SP      a    b    c\n",
-      "---  ----  ---  ---  ---\n",
-      "  0  Mg      0    0    0\n",
-      "  1  Mg      1    0    0\n"
+      "Dimensionality = 3\n",
+      "\n",
+      "Space group = 225\n",
+      "\n",
+      "N atoms = 2\n",
+      "\n",
+      "N symmetry operations = 48\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from CRYSTALpytools.convert import cry_gui2pmg\n",
-    "\n",
     "gui = Crystal_gui().read_gui('data/mgo_optgeom.opttraj/mgo-opt004.gui')\n",
-    "print(cry_gui2pmg(gui))"
+    "print('Dimensionality = {:d}\\n'.format(gui.dimensionality))\n",
+    "print('Space group = {:d}\\n'.format(gui.space_group))\n",
+    "print('N atoms = {:d}\\n'.format(gui.n_atoms))\n",
+    "print('N symmetry operations = {:d}\\n'.format(gui.n_symmops))"
    ]
   },
   {
@@ -1841,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "36f7ffd0",
    "metadata": {
     "tags": []
@@ -1853,13 +1866,13 @@
     "\n",
     "# A conventional cell is generated here, which will not be reduced to maintain consistency\n",
     "substrate = Structure.from_spacegroup(\"Fm-3m\", Lattice.cubic(4.217), [\"Mg\",'O'], [[0, 0, 0],[0.5,0.5,0.5]])\n",
-    "mgo_gui = cry_pmg2gui(substrate)\n",
+    "mgo_gui = cry_pmg2gui(substrate, gui_file=None)\n",
     "mgo_gui.write_gui('data/mgo_write_gui.gui')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "e6bae971",
    "metadata": {
     "tags": []
@@ -2095,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "502ec530",
    "metadata": {
     "tags": []
@@ -2112,13 +2125,13 @@
     "\n",
     "# Pymatgen get_slab will return to a 3D structure. Use pbc to force the\n",
     "# implementation of 2D periodicity otherwise the vaccum input is invalid\n",
-    "mgo_slab_gui = cry_pmg2gui(substrate, pbc=[True, True, False], vacuum=25)\n",
+    "mgo_slab_gui = cry_pmg2gui(substrate, gui_file=None, pbc=[True, True, False], vacuum=25)\n",
     "mgo_slab_gui.write_gui('data/mgo_100_write_gui.gui',mgo_slab_gui)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "dc48a185",
    "metadata": {
     "tags": []
